# Multi-Role-Based-RAG-Chatbot

./: README.md  SETUP.md  pyproject.toml  requirements.txt  run_app.py
app/: main.py  streamlit_app.py
app/services/: chat_service.py  document_processor.py  vector_store.py
resources/vector_store/: engineering_docs.pkl  engineering_index.faiss  engineering_meta.pkl  finance_docs.pkl  finance_index.faiss  finance_meta.pkl  general_docs.pkl  general_index.faiss  general_meta.pkl  hr_docs.pkl  hr_index.faiss  hr_meta.pkl  marketing_docs.pkl  marketing_index.faiss  marketing_meta.pkl
